Merge v2